force-app/main/default/objects/Education__c/fields/Education_Name__c.field-meta.xml
<CustomField>
    <fullName>Education_Name__c</fullName>
    <label>Education Name</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>