force-app/main/default/objects/Education__c/fields/Institution_Name__c.field-meta.xml
<CustomField>
    <fullName>Institution_Name__c</fullName>
    <label>Institution Name</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>