force-app/main/default/objects/Education__c/fields/Passing_Year__c.field-meta.xml
<CustomField>
    <fullName>Passing_Year__c</fullName>
    <label>Passing Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>