force-app/main/default/objects/Education__c/fields/Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Portfolio__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Portfolio</label>
    <referenceTo>Portfolio__c</referenceTo>
    <relationshipLabel>Educations</relationshipLabel>
    <relationshipName>Educations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>